<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="30dp">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:src="@drawable/set_wallpaper"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/set_wallpaper_as"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ps_semi_bold"
        android:text="@string/set_wallpaper_on"
        android:textColor="@color/black"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/on_home_screen_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/home_screen"
            android:fontFamily="@font/ps_regular"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/on_lock_screen_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/lock_screen"
            android:fontFamily="@font/ps_regular"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/on_both_screen_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/both"
            android:fontFamily="@font/ps_regular"
            android:textColor="@color/black"/>
    </LinearLayout>


</LinearLayout>