<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <RelativeLayout
        android:id="@+id/delicon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/del" />
    </RelativeLayout>

    <TextView
        android:id="@+id/takerev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/delicon"
        android:layout_marginTop="13dp"
        android:fontFamily="@font/ps_regular"
        android:gravity="center"
        android:text="@string/do_you_really_want_to_clear_cache"
        android:textSize="13sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/takerev"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/yes"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="#f9f9f9"
            android:fontFamily="@font/ps_semi_bold"
            android:hint="@string/yes"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/no"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="#f9f9f9"
            android:fontFamily="@font/ps_semi_bold"
            android:hint="@string/no"
            android:textColorHint="@color/black" />

    </RelativeLayout>
</RelativeLayout>